# json-errors

./: README.md  dev_requirements.in  dev_requirements.txt  pyproject.toml
src/json_errors/: __init__.py
tests/: test_json_errors.py
