[build-system]
requires = [
    "setuptools >= 65",
]
build-backend = "setuptools.build_meta"

[project]
name = "json-errors"
description = "An experiment to get more readable error messages from json.JSONDecodeError"
readme = "README.md"
authors = [
  {name = "Alex Chan", email = "alex@alexwlchan.net"},
]
maintainers = [
  {name = "Alex Chan", email="alex@alexwlchan.net"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = []
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/alexwlchan/json-errors"
"Changelog" = "https://github.com/alexwlchan/json-errors/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {attr = "json_errors.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nitrate = ["py.typed"]

[tool.coverage.run]
branch = true
source = ["json_errors", "tests",]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100

[tool.pytest.ini_options]
filterwarnings = ["error"]

[tool.mypy]
mypy_path = "src"
strict = true

[tool.interrogate]
fail_under = 100
omit-covered-files = true
